@@ -27,6 +27,8 @@ Changes from versions 2.4.* to version 3.0:
 - A new rounding mode (MPFR_RNDA) is available to round away from zero.
 - Functions mpfr_random and mpfr_random2 have been removed.
 - mpfr_get_f and mpfr_get_z now return a ternary value.
+- News functions mpfr_buildopt_tls_p and mpfr_buildopt_decimal_p giving information
+  about options used at compile time.
 
 Changes from versions 2.3.* to version 2.4.0:
 - MPFR is now a GNU package.
